target/classes/META-INF/fabric8/openshift/metalsa-demo-deploymentconfig.yml
---
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    fabric8.io/metrics-path: "dashboard/file/kubernetes-pods.json/?var-project=metalsa-demo&var-version=0.0.1-SNAPSHOT"
    fabric8.io/iconUrl: "img/icons/spring-boot.svg"
  labels:
    project: "metalsa-demo"
    provider: "fabric8"
    group: "com.redhat.demos"
    version: "0.0.1-SNAPSHOT"
  name: "metalsa-demo"
spec:
  replicas: 1
  selector:
    project: "metalsa-demo"
    provider: "fabric8"
    group: "com.redhat.demos"
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: "Rolling"
  template:
    metadata:
      annotations:
        fabric8.io/metrics-path: "dashboard/file/kubernetes-pods.json/?var-project=metalsa-demo&var-version=0.0.1-SNAPSHOT"
        fabric8.io/iconUrl: "img/icons/spring-boot.svg"
      labels:
        project: "metalsa-demo"
        provider: "fabric8"
        group: "com.redhat.demos"
        version: "0.0.1-SNAPSHOT"
    spec:
      containers:
      - env:
        - name: "MYSQL_SERVICE_NAME"
          value: "mysql"
        - name: "MYSQL_SERVICE_DATABASE"
          value: "sampledb"
        - name: "MYSQL_SERVICE_USERNAME"
          value: "${mysql-service-username}"
        - name: "MYSQL_SERVICE_PASSWORD"
          value: "${mysql-service-password}"
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        - name: "JAVA_APP_DIR"
          value: "/deployments"
        image: "metalsa-demo:latest"
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: "/health"
            port: 8081
          initialDelaySeconds: 180
        name: "spring-boot"
        ports:
        - containerPort: 9779
          name: "prometheus"
          protocol: "TCP"
        - containerPort: 8778
          name: "jolokia"
          protocol: "TCP"
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        readinessProbe:
          httpGet:
            path: "/health"
            port: 8081
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: "ConfigChange"
  - imageChangeParams:
      automatic: true
      containerNames:
      - "spring-boot"
      from:
        kind: "ImageStreamTag"
        name: "metalsa-demo:latest"
    type: "ImageChange"
