target/classes/META-INF/fabric8/openshift/metalsa-demo-svc.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    fabric8.io/iconUrl: "img/icons/spring-boot.svg"
  labels:
    expose: "true"
    project: "metalsa-demo"
    provider: "fabric8"
    group: "com.redhat.demos"
    version: "0.0.1-SNAPSHOT"
  name: "metalsa-demo"
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 8080
  selector:
    project: "metalsa-demo"
    provider: "fabric8"
    group: "com.redhat.demos"
