target/classes/META-INF/fabric8/openshift/metalsa-demo-route.yml
---
apiVersion: "v1"
kind: "Route"
metadata:
  labels:
    project: "metalsa-demo"
    provider: "fabric8"
    group: "com.redhat.demos"
    version: "0.0.1-SNAPSHOT"
  name: "metalsa-demo"
spec:
  to:
    kind: "Service"
    name: "spring-boot-camel-rest-s"
